from build.c import clibrary
from build.protobuf import proto, protocc

clibrary(
    name="lib",
    cflags=["-I."],
    srcs=[
        "./bitmap.cc",
        "./bytes.cc",
        "./config.cc",
        "./crc.cc",
        "./csvreader.cc",
        "./decoders/decoders.cc",
        "./decoders/fluxdecoder.cc",
        "./decoders/fluxmapreader.cc",
        "./decoders/fmmfm.cc",
        "./encoders/encoders.cc",
        "./fl2.cc",
        "./flags.cc",
        "./fluxmap.cc",
        "./fluxsink/a2rfluxsink.cc",
        "./fluxsink/aufluxsink.cc",
        "./fluxsink/fl2fluxsink.cc",
        "./fluxsink/fluxsink.cc",
        "./fluxsink/hardwarefluxsink.cc",
        "./fluxsink/scpfluxsink.cc",
        "./fluxsink/vcdfluxsink.cc",
        "./fluxsource/a2rfluxsource.cc",
        "./fluxsource/cwffluxsource.cc",
        "./fluxsource/erasefluxsource.cc",
        "./fluxsource/fl2fluxsource.cc",
        "./fluxsource/fluxsource.cc",
        "./fluxsource/flx.cc",
        "./fluxsource/flxfluxsource.cc",
        "./fluxsource/hardwarefluxsource.cc",
        "./fluxsource/kryoflux.cc",
        "./fluxsource/kryofluxfluxsource.cc",
        "./fluxsource/memoryfluxsource.cc",
        "./fluxsource/scpfluxsource.cc",
        "./fluxsource/testpatternfluxsource.cc",
        "./globals.cc",
        "./hexdump.cc",
        "./image.cc",
        "./imagereader/d64imagereader.cc",
        "./imagereader/d88imagereader.cc",
        "./imagereader/dimimagereader.cc",
        "./imagereader/diskcopyimagereader.cc",
        "./imagereader/fdiimagereader.cc",
        "./imagereader/imagereader.cc",
        "./imagereader/imdimagereader.cc",
        "./imagereader/imgimagereader.cc",
        "./imagereader/jv3imagereader.cc",
        "./imagereader/nfdimagereader.cc",
        "./imagereader/nsiimagereader.cc",
        "./imagereader/td0imagereader.cc",
        "./imagewriter/d64imagewriter.cc",
        "./imagewriter/d88imagewriter.cc",
        "./imagewriter/diskcopyimagewriter.cc",
        "./imagewriter/imagewriter.cc",
        "./imagewriter/imdimagewriter.cc",
        "./imagewriter/imgimagewriter.cc",
        "./imagewriter/ldbsimagewriter.cc",
        "./imagewriter/nsiimagewriter.cc",
        "./imagewriter/rawimagewriter.cc",
        "./layout.cc",
        "./ldbs.cc",
        "./logger.cc",
        "./proto.cc",
        "./readerwriter.cc",
        "./sector.cc",
        "./usb/fluxengineusb.cc",
        "./usb/greaseweazle.cc",
        "./usb/greaseweazleusb.cc",
        "./usb/serial.cc",
        "./usb/usb.cc",
        "./usb/usbfinder.cc",
        "./utils.cc",
        "./vfs/acorndfs.cc",
        "./vfs/amigaffs.cc",
        "./vfs/appledos.cc",
        "./vfs/applesingle.cc",
        "./vfs/brother120fs.cc",
        "./vfs/cbmfs.cc",
        "./vfs/cpmfs.cc",
        "./vfs/fatfs.cc",
        "./vfs/fluxsectorinterface.cc",
        "./vfs/imagesectorinterface.cc",
        "./vfs/lif.cc",
        "./vfs/machfs.cc",
        "./vfs/microdos.cc",
        "./vfs/philefs.cc",
        "./vfs/prodos.cc",
        "./vfs/roland.cc",
        "./vfs/smaky6fs.cc",
        "./vfs/vfs.cc",
        "./vfs/zdos.cc",
    ],
    hdrs={
        "lib/bitmap.h": "./bitmap.h",
        "lib/bytes.h": "./bytes.h",
        "lib/config.h": "./config.h",
        "lib/crc.h": "./crc.h",
        "lib/csvreader.h": "./csvreader.h",
        "lib/decoders/decoders.h": "./decoders/decoders.h",
        "lib/decoders/fluxdecoder.h": "./decoders/fluxdecoder.h",
        "lib/decoders/fluxmapreader.h": "./decoders/fluxmapreader.h",
        "lib/decoders/rawbits.h": "./decoders/rawbits.h",
        "lib/encoders/encoders.h": "./encoders/encoders.h",
        "lib/fl2.h": "./fl2.h",
        "lib/flags.h": "./flags.h",
        "lib/flux.h": "./flux.h",
        "lib/fluxmap.h": "./fluxmap.h",
        "lib/fluxsink/fluxsink.h": "./fluxsink/fluxsink.h",
        "lib/fluxsource/fluxsource.h": "lib/fluxsource/fluxsource.h",
        "lib/globals.h": "./globals.h",
        "lib/image.h": "./image.h",
        "lib/imagereader/imagereader.h": "./imagereader/imagereader.h",
        "lib/imagewriter/imagewriter.h": "./imagewriter/imagewriter.h",
        "lib/layout.h": "./layout.h",
        "lib/proto.h": "./proto.h",
        "lib/readerwriter.h": "./readerwriter.h",
        "lib/sector.h": "./sector.h",
        "lib/usb/usb.h": "./usb/usb.h",
        "lib/utils.h": "./utils.h",
        "lib/vfs/sectorinterface.h": "./vfs/sectorinterface.h",
        "lib/vfs/vfs.h": "./vfs/vfs.h",
    },
    deps=[
        "+fl2_proto_lib",
        ".+config_proto_lib",
        "dep/libusbp",
        "dep/adflib",
        "dep/fatfs",
        "dep/hfsutils",
    ],
)

proto(name="common_proto", srcs=["./common.proto"])

proto(
    name="config_proto",
    srcs=[
        "./config.proto",
        "./layout.proto",
        "./drive.proto",
        "./decoders/decoders.proto",
        "./encoders/encoders.proto",
        "./fluxsink/fluxsink.proto",
        "./fluxsource/fluxsource.proto",
        "./imagereader/imagereader.proto",
        "./imagewriter/imagewriter.proto",
        "./usb/usb.proto",
        "./vfs/vfs.proto",
    ],
    deps=[".+common_proto"],
)

protocc(name="config_proto_lib", srcs=[".+config_proto", "arch+arch_proto"])
